// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Navigation can be used when [FRAGILE] allows to render logo, links and action components as nodes 1`] = `
<DocumentFragment>
  <nav
    class="navigation my-class"
  >
    <div
      class="navigation-logo"
    >
      <div>
        Logo
      </div>
    </div>
    <ul
      class="navigation-links"
    >
      <li
        class="navigation-link"
      >
        <a
          href="https://google.com"
        >
          Link 1
        </a>
      </li>
      <li
        class="navigation-link"
      >
        <a
          href="https://google.com"
        >
          Link 2
        </a>
      </li>
    </ul>
    <div
      class="navigation-action"
    >
      <div>
        Action
      </div>
    </div>
    <button
      class="button size-3 rounded filled primary navigation-mobile-trigger"
      shape="rounded"
      size="3"
      title="Open"
    >
      <svg
        class="icon hamburger-icon"
        fill="none"
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M4 7H7M20 7H11M20 17H17M4 17H13M4 12H20"
          stroke="black"
          stroke-linecap="round"
          stroke-width="1.5"
        />
      </svg>
    </button>
    <div
      class="navigation-mobile"
    >
      <header
        class="navigation-mobile-header"
      >
        <button
          class="button size-3 rounded filled primary navigation-mobile-close"
          shape="rounded"
          size="3"
          title="Close"
        >
          <svg
            class="icon close-icon"
            fill="none"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M6.4 19L5 17.6L10.6 12L5 6.4L6.4 5L12 10.6L17.6 5L19 6.4L13.4 12L19 17.6L17.6 19L12 13.4L6.4 19Z"
            />
          </svg>
        </button>
      </header>
      <div
        class="navigation-mobile-links-wrapper"
      >
        <ul
          class="navigation-mobile-links"
        >
          <li
            class="navigation-mobile-link"
          >
            <a
              href="https://google.com"
            >
              Link 1
            </a>
          </li>
          <li
            class="navigation-mobile-link"
          >
            <a
              href="https://google.com"
            >
              Link 2
            </a>
          </li>
        </ul>
      </div>
      <footer
        class="navigation-mobile-footer"
      >
        <div>
          Action
        </div>
      </footer>
    </div>
  </nav>
</DocumentFragment>
`;

exports[`Navigation can be used when [FRAGILE] allows to toggle mobile menu 1`] = `
<DocumentFragment>
  <nav
    class="navigation"
  >
    <div
      class="navigation-logo"
    >
      <div>
        Logo
      </div>
    </div>
    <ul
      class="navigation-links"
    >
      <li
        class="navigation-link"
      >
        <a
          href="https://google.com"
        >
          Link 1
        </a>
      </li>
      <li
        class="navigation-link"
      >
        <a
          href="https://google.com"
        >
          Link 2
        </a>
      </li>
    </ul>
    <div
      class="navigation-action"
    >
      <div>
        Action
      </div>
    </div>
    <button
      class="button size-3 rounded filled primary navigation-mobile-trigger"
      shape="rounded"
      size="3"
      title="Open"
    >
      <svg
        class="icon hamburger-icon"
        fill="none"
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M4 7H7M20 7H11M20 17H17M4 17H13M4 12H20"
          stroke="black"
          stroke-linecap="round"
          stroke-width="1.5"
        />
      </svg>
    </button>
    <div
      class="navigation-mobile"
    >
      <header
        class="navigation-mobile-header"
      >
        <button
          class="button size-3 rounded filled primary navigation-mobile-close"
          shape="rounded"
          size="3"
          title="Close"
        >
          <svg
            class="icon close-icon"
            fill="none"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M6.4 19L5 17.6L10.6 12L5 6.4L6.4 5L12 10.6L17.6 5L19 6.4L13.4 12L19 17.6L17.6 19L12 13.4L6.4 19Z"
            />
          </svg>
        </button>
      </header>
      <div
        class="navigation-mobile-links-wrapper"
      >
        <ul
          class="navigation-mobile-links"
        >
          <li
            class="navigation-mobile-link"
          >
            <a
              href="https://google.com"
            >
              Link 1
            </a>
          </li>
          <li
            class="navigation-mobile-link"
          >
            <a
              href="https://google.com"
            >
              Link 2
            </a>
          </li>
        </ul>
      </div>
      <footer
        class="navigation-mobile-footer"
      >
        <div>
          Action
        </div>
      </footer>
    </div>
  </nav>
</DocumentFragment>
`;

exports[`Navigation can be used when [FRAGILE] allows to toggle mobile menu 2`] = `
<DocumentFragment>
  <nav
    class="navigation"
  >
    <div
      class="navigation-logo"
    >
      <div>
        Logo
      </div>
    </div>
    <ul
      class="navigation-links"
    >
      <li
        class="navigation-link"
      >
        <a
          href="https://google.com"
        >
          Link 1
        </a>
      </li>
      <li
        class="navigation-link"
      >
        <a
          href="https://google.com"
        >
          Link 2
        </a>
      </li>
    </ul>
    <div
      class="navigation-action"
    >
      <div>
        Action
      </div>
    </div>
    <button
      class="button size-3 rounded filled primary navigation-mobile-trigger"
      shape="rounded"
      size="3"
      title="Open"
    >
      <svg
        class="icon hamburger-icon"
        fill="none"
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M4 7H7M20 7H11M20 17H17M4 17H13M4 12H20"
          stroke="black"
          stroke-linecap="round"
          stroke-width="1.5"
        />
      </svg>
    </button>
    <div
      class="navigation-mobile opened"
    >
      <header
        class="navigation-mobile-header"
      >
        <button
          class="button size-3 rounded filled primary navigation-mobile-close"
          shape="rounded"
          size="3"
          title="Close"
        >
          <svg
            class="icon close-icon"
            fill="none"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M6.4 19L5 17.6L10.6 12L5 6.4L6.4 5L12 10.6L17.6 5L19 6.4L13.4 12L19 17.6L17.6 19L12 13.4L6.4 19Z"
            />
          </svg>
        </button>
      </header>
      <div
        class="navigation-mobile-links-wrapper"
      >
        <ul
          class="navigation-mobile-links"
        >
          <li
            class="navigation-mobile-link"
          >
            <a
              href="https://google.com"
            >
              Link 1
            </a>
          </li>
          <li
            class="navigation-mobile-link"
          >
            <a
              href="https://google.com"
            >
              Link 2
            </a>
          </li>
        </ul>
      </div>
      <footer
        class="navigation-mobile-footer"
      >
        <div>
          Action
        </div>
      </footer>
    </div>
  </nav>
</DocumentFragment>
`;

exports[`Navigation can be used when [FRAGILE] allows to toggle mobile menu 3`] = `
<DocumentFragment>
  <nav
    class="navigation"
  >
    <div
      class="navigation-logo"
    >
      <div>
        Logo
      </div>
    </div>
    <ul
      class="navigation-links"
    >
      <li
        class="navigation-link"
      >
        <a
          href="https://google.com"
        >
          Link 1
        </a>
      </li>
      <li
        class="navigation-link"
      >
        <a
          href="https://google.com"
        >
          Link 2
        </a>
      </li>
    </ul>
    <div
      class="navigation-action"
    >
      <div>
        Action
      </div>
    </div>
    <button
      class="button size-3 rounded filled primary navigation-mobile-trigger"
      shape="rounded"
      size="3"
      title="Open"
    >
      <svg
        class="icon hamburger-icon"
        fill="none"
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M4 7H7M20 7H11M20 17H17M4 17H13M4 12H20"
          stroke="black"
          stroke-linecap="round"
          stroke-width="1.5"
        />
      </svg>
    </button>
    <div
      class="navigation-mobile"
    >
      <header
        class="navigation-mobile-header"
      >
        <button
          class="button size-3 rounded filled primary navigation-mobile-close"
          shape="rounded"
          size="3"
          title="Close"
        >
          <svg
            class="icon close-icon"
            fill="none"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M6.4 19L5 17.6L10.6 12L5 6.4L6.4 5L12 10.6L17.6 5L19 6.4L13.4 12L19 17.6L17.6 19L12 13.4L6.4 19Z"
            />
          </svg>
        </button>
      </header>
      <div
        class="navigation-mobile-links-wrapper"
      >
        <ul
          class="navigation-mobile-links"
        >
          <li
            class="navigation-mobile-link"
          >
            <a
              href="https://google.com"
            >
              Link 1
            </a>
          </li>
          <li
            class="navigation-mobile-link"
          >
            <a
              href="https://google.com"
            >
              Link 2
            </a>
          </li>
        </ul>
      </div>
      <footer
        class="navigation-mobile-footer"
      >
        <div>
          Action
        </div>
      </footer>
    </div>
  </nav>
</DocumentFragment>
`;
